--- a/src/Components/Pages/Signs/style.scss
+++ b/src/Components/Pages/Signs/style.scss
@@ -36,6 +36,10 @@ text-align: center;
       height: 200px;
       border-radius: 50%;
       margin-bottom: 22px;
+
+      &:hover {
+        cursor: zoom-in;
+      }
     }
 
     p {
