--- a/src/Components/Lancamentos/style.scss
+++ b/src/Components/Lancamentos/style.scss
@@ -1,24 +1,21 @@
 #releases {
-text-align: center;
-display: flex;
-padding: 100px 270px;
+  padding: 0 200px;
 
-div {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 48px;
+  div {
+  display: block;
+  text-align: center;
 
-    img {
-      width: 200px;
-      height: 200px;
-      border-radius: 9px;
-      margin-bottom: 16px;
-    }
+  img {
+    width: 200px;
+    height: 200px;
+    border-radius: 9px;
+    margin-bottom: 16px;
+  }
 
-    div {
-      width: 350px;
-      display: block;
-      margin-bottom: 32px;
+  div {
+    width: 700px;
+    display: flex;
+    margin-bottom: 32px;
 
       .news {
         display: block;
@@ -28,19 +25,27 @@ div {
           color: yellow;
           text-decoration: none;
           font-size: 24px;
+          border: 2px solid yellow;
+          background: transparent;
+          border-radius: 9px;
+          padding: 6px;
 
           &:hover {
-            text-decoration: underline;
+            color: black;
+            background-color: yellow;
+            font-weight: bold;
+            border: none;
           }
         }
 
         p {
           color: white;
-          width: 300px;
-          width: 100%;
-          height: 100%;
           margin-top: 16px;
         }
+      }
+
+      .right {
+          margin-right: 26px;
       }
     }
   }
